Day 3 update: Sleek cyan redesign, centered hero, removed extra links

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Md Shafak — Backend & AI Developer</title>
 
-  <!-- Inter font (system fallback included) -->
+  <!-- Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
   <meta name="theme-color" content="#0f172a">
 </head>
@@ -24,7 +23,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
 
-      <!-- Top-right GitHub & LinkedIn buttons -->
+      <!-- Top-right GitHub + LinkedIn buttons -->
       <div class="actions">
         <a class="btn ghost" href="https://github.com/Shafak07" target="_blank" rel="noopener">GitHub</a>
         <a class="btn ghost" href="https://www.linkedin.com/in/shafak07/" target="_blank" rel="noopener">LinkedIn</a>
@@ -36,31 +35,27 @@
 
   <main>
     <!-- HERO -->
-    <section id="hero" class="hero container glass">
-      <div class="hero-left">
-        <div class="avatar-wrap">
-          <img src="assets/profile.png" alt="Md Shafak" class="avatar">
-        </div>
+    <section id="hero" class="hero container">
+      <div class="avatar-wrap">
+        <img src="assets/profile.png" alt="Md Shafak" class="avatar">
       </div>
 
-      <div class="hero-right">
-        <h1 class="name">Md Shafak</h1>
-        <p class="title">Backend & AI Developer</p>
+      <h1 class="name">Md Shafak</h1>
+      <p class="title">Backend & AI Developer</p>
 
-        <p class="lead">
-          Backend developer & prompt engineer focused on building scalable distributed services and fast, reliable LLM workflows.
-          I work with Python, Flask / FastAPI, PostgreSQL, Redis, Docker, and cloud-native deployments.
-        </p>
+      <p class="lead">
+        Backend developer & prompt engineer focused on building scalable distributed services and fast, reliable LLM workflows.
+        I work with Python, Flask / FastAPI, PostgreSQL, Redis, Docker, and cloud-native deployments.
+      </p>
 
-        <div class="hero-ctas">
-          <a class="btn primary" href="mailto:ayaanmohammad170@gmail.com">Email Me</a>
-          <a class="btn outline" href="#projects">View Projects</a>
-        </div>
+      <div class="hero-ctas">
+        <a class="btn primary" href="mailto:ayaanmohammad170@gmail.com">Email Me</a>
+        <a class="btn outline" href="#projects">View Projects</a>
       </div>
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="section container glass">
+    <section id="about" class="section container">
       <h2>About</h2>
       <p>
         I'm a Backend Developer and AI Prompt Engineer experienced in architecting scalable microservices and production LLM systems.
@@ -69,7 +64,7 @@
     </section>
 
     <!-- SKILLS -->
-    <section id="skills" class="section container glass">
+    <section id="skills" class="section container">
       <h2>Skills</h2>
       <div class="chips">
         <span>Python</span>
@@ -86,7 +81,7 @@
     </section>
 
     <!-- EXPERIENCE -->
-    <section id="experience" class="section container glass">
+    <section id="experience" class="section container">
       <h2>Experience</h2>
 
       <article class="exp">
@@ -116,7 +111,7 @@
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="section container glass">
+    <section id="projects" class="section container">
       <h2>Projects</h2>
 
       <div class="project-grid">
@@ -141,13 +136,13 @@
     </section>
 
     <!-- EDUCATION -->
-    <section id="education" class="section container glass">
+    <section id="education" class="section container">
       <h2>Education</h2>
       <p>B.Tech in Computer Science & Engineering — B P Mandal College of Engineering (CGPA: 8.36)</p>
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="section container glass">
+    <section id="contact" class="section container">
       <h2>Contact</h2>
       <p>I'm open to backend, infra, and LLM-related roles and collaborations.</p>
 
@@ -159,13 +154,6 @@
         <div>
           <strong>Phone</strong>
           <p>+91 8340410491</p>
-        </div>
-        <div>
-          <strong>Links</strong>
-          <p>
-            <a href="https://github.com/Shafak07" target="_blank">GitHub</a><br>
-            <a href="https://www.linkedin.com/in/shafak07/" target="_blank">LinkedIn</a>
-          </p>
         </div>
       </div>
     </section>
