Fix business card back layout and QR responsiveness

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
 
-      <!-- Top-right GitHub + LinkedIn buttons -->
       <div class="actions">
         <a class="btn ghost" href="https://github.com/Shafak07" target="_blank" rel="noopener">GitHub</a>
         <a class="btn ghost" href="https://www.linkedin.com/in/shafak07/" target="_blank" rel="noopener">LinkedIn</a>
@@ -61,6 +60,39 @@
         I'm a Backend Developer and AI Prompt Engineer experienced in architecting scalable microservices and production LLM systems.
         I build resilient APIs, reduce latency via caching & query optimization, and deploy cloud-native solutions with CI/CD.
       </p>
+    </section>
+    <!-- BUSINESS CARD -->
+    <section id="card" class="section container">
+  <h2>Business Card</h2>
+  <div class="business-card-wrapper">
+    <div class="business-card" id="bizCard">
+      <!-- Front -->
+      <div class="card-face card-front">
+        <div class="left">
+          <img src="assets/profile.png" alt="Md Shafak" class="card-avatar">
+          <div class="card-info">
+            <h3>Md Shafak</h3>
+            <p class="role">Backend Developer & AI Engineer</p>
+            <p class="location">📍 New Delhi, India</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Back -->
+      <div class="card-face card-back">
+        <h3>Contact Me</h3>
+        <p><strong>Email:</strong> <a href="mailto:ayaanmohammad170@gmail.com">ayaanmohammad170@gmail.com</a></p>
+        <p><strong>Phone:</strong> +91 8340410491</p>
+        <div class="card-links">
+          <a href="https://github.com/Shafak07" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/shafak07/" target="_blank">LinkedIn</a>
+        </div>
+        <img src="assets/qr.png" alt="QR Code" class="qr">
+      </div>
+    </div>
+  </div>
+</section>
+
     </section>
 
     <!-- SKILLS -->
